# Amazons-Linux

./: manifest.json.in
plugins/Amazons/: CMakeLists.txt
qml/: AboutView.qml  ConfirmDialog.qml  DefaultHeader.qml  GameView.qml  Main.qml  RulesView.qml  SetupView.qml  WrappingLabel.qml
